[package]
name = "seymour-cli"
version = "0.1.0"
authors = ["Jay Vana <jaysvana@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
prettytable-rs = "0.8"
structopt = "0.3"
serde_derive = "1.0"
serde = "1.0"
seymour-protocol = "0.1"
tokio = { version = "0.2", features = ["stream", "tcp", "macros", "rt-core", "rt-threaded", "time", "io-util"] }
toml = "0.5"
xdg = "2.0"
